fail if entries in positions file have different ref base to what pileup threads get from supplied reference file